--- a/BizLibrary/BizLibrary.csproj
+++ b/BizLibrary/BizLibrary.csproj
@@ -45,6 +45,24 @@
   <ItemGroup>
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Implementations\AccountRepository.cs" />
+    <Compile Include="Repositories\Implementations\AuthorRepository.cs" />
+    <Compile Include="Repositories\Implementations\DiscountRepository.cs" />
+    <Compile Include="Repositories\Implementations\GenreRepository.cs" />
+    <Compile Include="Repositories\Implementations\PlateRepository.cs" />
+    <Compile Include="Repositories\Implementations\PublisherRepository.cs" />
+    <Compile Include="Repositories\Implementations\RoleRepository.cs" />
+    <Compile Include="Repositories\Implementations\SaleRepository.cs" />
+    <Compile Include="Repositories\Implementations\TrackRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IAccountRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IAuthorRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IDiscountRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IGenreRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IPlateRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IPublisherRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IRoleRepository.cs" />
+    <Compile Include="Repositories\Interfaces\ISaleRepository.cs" />
+    <Compile Include="Repositories\Interfaces\ITrackRepository.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\AuthorViewModel.cs" />
     <Compile Include="ViewModels\DiscountViewModel.cs" />
@@ -61,5 +79,6 @@
       <Name>ModelsLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
