--- a/MusicShop/MusicShop.csproj
+++ b/MusicShop/MusicShop.csproj
@@ -148,5 +148,8 @@
       <Name>BizLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Icons\backArrow.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
