--- a/BizLibrary/BizLibrary.csproj
+++ b/BizLibrary/BizLibrary.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Implementations\AccountRepository.cs" />
+    <Compile Include="Repositories\Implementations\AllRepositories.cs" />
     <Compile Include="Repositories\Implementations\AuthorRepository.cs" />
     <Compile Include="Repositories\Implementations\DiscountRepository.cs" />
     <Compile Include="Repositories\Implementations\GenreRepository.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Repositories\Interfaces\ITrackRepository.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\AuthorViewModel.cs" />
+    <Compile Include="ViewModels\ClientViewModel.cs" />
     <Compile Include="ViewModels\DiscountViewModel.cs" />
     <Compile Include="ViewModels\GenreViewModel.cs" />
     <Compile Include="ViewModels\PlateViewModel.cs" />
