--- a/MusicShop/MusicShop.csproj
+++ b/MusicShop/MusicShop.csproj
@@ -79,6 +79,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Resourses\RoundButtonSheet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resourses\TextBoxStyleSheet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -164,6 +168,18 @@
     <Resource Include="Pictures\Images\LetItBe.jpg" />
     <Resource Include="Pictures\Images\Rise.jpg" />
     <Resource Include="Pictures\Images\TheBeatles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Images\client.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Images\MusicShopLogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Images\plate.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Images\your_addHere.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
