--- a/MusicShop/MusicShop.csproj
+++ b/MusicShop/MusicShop.csproj
@@ -175,6 +175,12 @@
   <ItemGroup>
     <Resource Include="Pictures\Images\MusicShopLogo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Images\Listen.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Images\Vislovo.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
