--- a/MusicShop/MusicShop.csproj
+++ b/MusicShop/MusicShop.csproj
@@ -165,6 +165,9 @@
     <Resource Include="Pictures\Images\Rise.jpg" />
     <Resource Include="Pictures\Images\TheBeatles.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Icons\backArrow.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
