--- a/MusicShop/MusicShop.csproj
+++ b/MusicShop/MusicShop.csproj
@@ -275,6 +275,12 @@
   <ItemGroup>
     <Resource Include="Pictures\Icons\admin.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Images\admin.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Icons\admin.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
